# Ax

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CNAME  CONTRIBUTING.md  README.md  Readme.md  ax_client_snapshot.json  botorch_key.enc  build_thrift.py  experiment.json  foo.db  foo2.db  foo3.db  index.html  pyproject.toml  pytest.ini  requirements-fmt.txt  sahand.py  setup.py  sitemap.xml  test_flake8_type_checking.py  versions.html
.github/ISSUE_TEMPLATE/: 1_bug_report.yaml  2_feature_request.yaml  3_general_support.yaml
.github/workflows/: build-and-test.yml  build.yml  cron.yml  cron_pinned.yml  deploy.yml  lint.yml  publish_website.yml  publish_website_testing.yml  python-package.yml  reusable_test.yml  reusable_tutorials.yml  test_website.yml  tutorials.yml  website.yml
_sphinx-sources/: metrics.rst.txt  modelbridge.rst.txt  storage.rst.txt  utils.rst.txt
ae/: api.py
ae/benchmark/: benchmark_problem.py  benchmark_runner.py  benchmark_suite.py  generation_strategy.py  utils.py
ae/core/: alias.py  arm.py  base.py  base_trial.py  batch_trial.py  condition.py  data.py  experiment.py  generator_run.py  metric.py  multi_type_experiment.py  objective.py  observation.py  optimization_config.py  outcome_constraint.py  parameter.py  parameter_constraint.py  runner.py  search_space.py  simple_experiment.py  trial.py
ae/exceptions/: core.py  data_provider.py  model.py  storage.py
ae/generator/: alias.py  array.py  base.py  cross_validation.py  discrete.py  factory.py  generation_strategy.py  generator_utils.py  numpy.py  random.py  torch.py
ae/metrics/: alias.py  branin.py  factorial.py  hartmann6.py  noisy_function.py  registry.py
ae/modelbridge/: alias.py  array.py  base.py  cross_validation.py  discrete.py  factory.py  generation_strategy.py  modelbridge_utils.py  numpy.py  random.py  torch.py
ae/models/: alias.py  discrete_base.py  model_utils.py  numpy_base.py  torch_base.py
ae/plot/: bandit_rollout.py  base.py  color.py  contour.py  diagnostic.py  helper.py  render.py  scatter.py  slice.py  table_view.py  trace.py
ae/runners/: alias.py  registry.py  synthetic.py
ae/service/: service_api.py
ae/storage/: utils.py
ae/tests/: cli.py  doctest.py  fake.py  manifest.py  test_fully_annotated.py  test_pyre_strict.py  test_unittest_conventions.py
api/: analysis.html  ax.html  benchmark.html  core.html  early_stopping.html  exceptions.html  genindex.html  global_stopping.html  index.html  metrics.html  modelbridge.html  models.html  plot.html  py-modindex.html  runners.html  search.html  service.html  storage.html  telemetry.html  utils.html
api/_modules/: abc.html  index.html
ax/: __init__.py  __version__.py  api.py  ax_types.thrift  version.py
ax/adapter/: __init__.py  adapter_utils.py  base.py  best_model_selector.py  cross_validation.py  data_utils.py  discrete.py  dispatch_utils.py  external_generation_node.py  factory.py  generation_node.py  generation_node_input_constructors.py  generation_strategy.py  model_spec.py  observation_utils.py  pairwise.py  parameter_utils.py  prediction_utils.py  random.py  registry.py  torch.py  transition_criterion.py
ax/analysis/: __init__.py  analysis.py  analysis_batch.py  analysis_card.py  analysis_report.py  base_analysis.py  base_plotly_visualization.py  best_arms.py  best_trials.py  cross_validation_plot.py  diagnostics.py  dispatch.py  insights.py  metric_summary.py  overview.py  parallel_coordinates_plot.py  predicted_outcomes_dot_plot.py  results.py  search_space_summary.py  summary.py  tile_fitted_plot.py  trials.py  utils.py
css/: main.css
docs/: ab.md  ae-vs-traditional.mdx  algo-overview.html  algo-overview.md  analyses.md  api.html  api.md  applications.md  automl.md  banditopt.html  banditopt.md  bayesopt.html  bayesopt.md  core.html  core.md  custom-trials.md  data.html  data.md  eb.md  experiment.md  experiment.mdx  generation_strategy.mdx  generator.md  glossary.html  glossary.md  glossary.mdx  installation.html  installation.md  installation.mdx  intro-to-ae.md  intro-to-ae.mdx  intro-to-bo.md  intro-to-bo.mdx  modeling.md  models.html  models.md  orchestration.mdx  runner.md  storage.html  storage.md  (+6 more)
en/: index.html  versions.html
files/: building_blocks.py  external_generation_node.py  generation_strategy.ipynb  gpei_hartmann_developer.py  modular_botax.py  multi_task.ipynb  multi_task.py  multiobjective_optimization.py  saasbo.ipynb  saasbo_nehvi.py  scheduler.ipynb  sebo.ipynb  sebo.py
js/: plotUtils.js  searchindex.js
scripts/: build_ax.sh  check_pre_commit_reqs.py  convert_ipynb_to_mdx.py  docker_install.sh  import_ax.py  insert_api_refs.py  make_docs.sh  make_tutorials.py  parse_sphinx.py  parse_tutorials.py  patch_site_config.py  publish_site.sh  run_tutorials.py  test_report_autoescape_smoke.py  update_versions_html.py  validate_sphinx.py  versions.js  wheels_build.ps1
sphinx/: Makefile
tutorials/: Ax_Ray_tutorial.ipynb  Setup_and_Usage_of_BoTorch_Models_in_Ax.ipynb  ax_client_snapshot.json  benchmarking_suite_example.ipynb  botorch_modular.ipynb  building_blocks.html  building_blocks.ipynb  external_generation_node.html  external_generation_node.ipynb  factorial.html  factorial.ipynb  generation_strategy.html  generation_strategy.ipynb  gpei_hartmann_developer.html  gpei_hartmann_developer.ipynb  gpei_hartmann_loop.html  gpei_hartmann_loop.ipynb  gpei_hartmann_service.html  gpei_hartmann_service.ipynb  gpei_svm.ipynb  gpei_synthetic.ipynb  gss.html  gss.ipynb  human_loop.ipynb  index.html  managed_loop.ipynb  modular_botax.html  modular_botax.ipynb  multi_task.html  multi_task.ipynb  multiobjective_optimization.html  multiobjective_optimization.ipynb  raytune_pytorch_cnn.html  raytune_pytorch_cnn.ipynb  saasbo.html  saasbo.ipynb  saasbo_nehvi.html  saasbo_nehvi.ipynb  scheduler.html  scheduler.ipynb  (+11 more)
website/: README.md  docusaurus.config.js  package.json  sidebars.js  sidebars.json  siteConfig.js  tutorials.json  versions.json
website-old/: tutorials.json
website-v2/: docusaurus.config.js  sidebars.json
(+12326 files in other folders)
